--- a/style.css
+++ b/style.css
@@ -99,8 +99,7 @@ aside {
 .imgContainer img {
     width: 100%;
     height: 100%;
-    border-radius: 50%;
-    opacity: 0;
+    border-radius: 10px;
 }
 
 aside span {
